<?xml version="1.0" encoding="utf-8"?>
<resources>


    <!-- Strings related to settings -->

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_reverse_title">Reverse volume buttons</string>
    <string name="pref_reverse_summary">
        Reverse the track skipping assignment of the volume buttons
    </string>
    <string name="pref_timeout_title">Volume button timeout</string>
    <string name="pref_timeout_unit">ms</string>


    <!-- Settings for notifications -->
    <string name="pref_header_notification">Notification</string>
    <string name="pref_vibrate_title">Vibration feedback</string>
    <string name="pref_vibrate_summary">Vibrate when tracks are skipped</string>

    <!-- Strings related to about dialogs -->
    <string name="fragment_about">About</string>
    <string name="fragment_about_version">App Version</string>
    <string name="fragment_about_license">Open Source Licenses</string>
    <string name="fragment_about_license_summary">License details about open source software
    </string>

    <!-- Coach overlay -->
    <string name="coach_main_text">Double press the volume up or down buttons to skip a track
        while the screen is off. To enable or disable the functionality press the slider on the top
        menu bar.</string>
    <string name="coach_main_button">Got it</string>
    <string name="coach_main_image_desc">Phone with disabled screen and volume buttons</string>

</resources>
