<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/coach_main_overlay"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <io.github.j54n1n.skippey.widget.HoleImageView
        android:id="@+id/coach_main_hole"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/coach_main_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_main_text"
            android:paddingTop="?attr/actionBarSize"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:theme="@style/AppTheme.AppBarOverlay"
            />

        <Button
            android:id="@+id/coach_main_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coach_main_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:theme="@style/AppTheme.AppBarOverlay"
            style="@style/Widget.AppCompat.Button.Borderless" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/coach_main_image"
            android:layout_below="@id/coach_main_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_above="@+id/coach_main_button"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/coach_main_image_desc" />

    </RelativeLayout>

</FrameLayout>